Fix width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ a {
 .cinemagraph {
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  max-width: 100vw;
   transition: opacity 600ms ease-in-out;
 }
 
